samples/_failures_safe/1761412397_5f1cf9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b1aaece.c: In function ‘main’:
./samples/SAFE/__tmp_4b1aaece.c:142:20: error: missing terminating " character
  142 |             printf("Error: Columns of A must equal rows of
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4b1aaece.c:142:13: error: expected expression at end of input
  142 |             printf("Error: Columns of A must equal rows of
      |             ^~~~~~
./samples/SAFE/__tmp_4b1aaece.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b1aaece.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b1aaece.c:142:13: error: expected declaration or statement at end of input
